changed navbar, h1-h6, added sticky phone bar

--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -1,130 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Gold Key Group is part of Realty Revolution, where you can find some of the finest realtors in Orlando"
-    />
-    <meta
-      name="keywords"
-      content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment"
-    />
-    <title>Sell my house | Gold Key Group</title>
 
-    <link rel="stylesheet" href="../CSS/main/main.css" />
-    <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Gold Key Group is part of Realty Revolution, where you can find some of the finest realtors in Orlando" />
+  <meta name="keywords"
+    content="buy house, sell house, buy home, sell home, orlando, florida, realtor, realty, stellar mls, revolution realty, new construction, windermere, winter garden, florida home investment" />
+  <title>Gold Key Group | Realtors in Orlando</title>
 
-    <script
-      src="https://kit.fontawesome.com/76fa9a81bb.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <!-- BODY START -->
-  <body>
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- HEADER SCREEN START -->
-    <section class="header--bg" id="home">
-      <header class="alt--header">
-        <div class="header--flex">
-          <div class="header--col c1">
-            <h1 class="gkg gkg--lrg text--shadow section--title">
-              GOLD <br />
-              KEY <br />
-              GROUP
-            </h1>
-            <br />
-            <p class="egg--p">
-              We speak
-              <em><a href="#ENG" title="Click to translate">English</a></em> &
-              <em><a href="#ESP" title="Click to translate">Spanish</a> !</em>
-            </p>
-          </div>
-          <div class="header--col c2">
-            <img
-              src="../Images/maria-z--and--paula-c.jpg"
-              alt="Our Agents"
-              class="bs"
-            />
-          </div>
-        </div>
-        <p class="egg--p" id="header--text">
-          Looking to
-          <b>buy</b>
-          or
-          <b>sell</b>
-          a house in
-          <b>Florida</b>
-          ?
-          <br />
-          You're at the right place!
-        </p>
-      </header>
-      <div class="header--icons">
-        <a href="../HTML/index.html#home">
-          <svg class="fas fa-home"></svg>
+  <link rel="stylesheet" href="../CSS/main/main.css" />
+  <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
+
+  <script src="https://kit.fontawesome.com/76fa9a81bb.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <!-- 
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+              HEADER START          #################################$$$$$$$$$$  $$$$$$$$$$
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+    -->
+  <header class="header--disp--ptn header--bg">
+    <h1 class="gkg gkg--lrg text--shadow">
+      SELL PROPERTIES
+    </h2>
+    <br />
+    <p class="egg--p">
+      We speak
+      <em>
+        <a href="#ENG" title="Click to translate">
+          English
         </a>
-        <a
-          href="mailto:mariazendejas@gmail.com, paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello!%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
-          target="_blank"
-        >
-          <svg class="fas fa-envelope"></svg>
+      </em>
+      &
+      <em>
+        <a href="#ESP" title="Click to translate">
+          Spanish
         </a>
-        <a href="../HTML/index.html#about">
-          <svg class="fas fa-phone"></svg>
-        </a>
-      </div>
-      <div class="header-icons-sm">
-        <a href="https://www.facebook.com/goldkeyorlando/" target="_blank">
-          <svg class="fab fa-facebook-f"></svg>
-        </a>
-        <a href="https://www.instagram.com/goldkey_orlando/" target="_blank">
-          <i class="fab fa-instagram fa-fw"></i>
-        </a>
-        <a href="#" target="_blank">
-          <svg class="fab fa-twitter"></svg>
-        </a>
-      </div>
-      <img
-        src="../Images/Revolution Realty.png"
-        alt="Revolution Realty"
-        class="rr--logo bs"
-      />
-    </section>
-    <!-- HEADER SCREEN END -->
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- TOP NAVBAR START -->
-    <div id="top--nav">
-      <nav id="main--nav">
-        <h3 class="gkg"><a href="index.html">GKG</a></h3>
-        <ul>
-          <li><a href="../HTML/index.html#blog">Blogs</a></li>
-          <li><a href="../HTML/index.html#about">About us</a></li>
-          <li><a href="../HTML/index.html#why--us">Why us</a></li>
-          <li><a href="../HTML/index.html#contact">Contact</a></li>
-          <li><a href="../HTML/search.html" target="_blank">SEARCH</a></li>
-          <li><a href="../HTML/sell.html" id="sell--home">SELL</a></li>
-        </ul>
-      </nav>
+        !
+      </em>
+    </p>
     </div>
-
-    <!-- TOP NAVBAR END -->
-    <!-- ################################################################### -->
-    <!-- ################################################################### -->
-    <!-- SELLER FORM SCREEN START -->
+    <p class="egg--p" id="header--text"></p>
+  </header>
+  <!-- 
+    #################################                                            $$$$$$$$$$
+              HEADER END                                                         $$$$$$$$$$
+    #################################                                            $$$$$$$$$$
+    -->
+  <!-- 
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+              TOP NAV START         #################################$$$$$$$$$$  $$$$$$$$$$
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+    -->
+  <div id="top--nav">
+    <nav id="main--nav">
+      <h3 class="gkg">
+        <a href="index.html">
+          GKG
+        </a>
+      </h3>
+      <ul>
+        <li>
+          <a href="#about">
+            ABOUT
+          </a>
+        </li>
+        <li>
+          <a href="#why--us">
+            WHY US
+          </a>
+        </li>
+        <li>
+          <a href="#contact">
+            CONTACT
+          </a>
+        </li>
+        <li>
+          <a href="#blog">
+            BLOG
+          </a>
+        </li>
+        <li>
+          <a href="/HTML/search.html" target="_blank">
+            SEARCH HOMES
+          </a>
+        </li>
+        <li>
+          <a href="HTML/sell.html" id="sell--home">
+            SELL
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- 
+    #################################                                            $$$$$$$$$$
+              TOP NAV END                                                        $$$$$$$$$$
+    #################################                                            $$$$$$$$$$
+    -->
+  <!-- 
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+              MAIN START            #################################$$$$$$$$$$  $$$$$$$$$$
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+    -->
+  <main>
     <section class="screen">
       <div class="content">
-        <h1 class="gkg">Sell your home with us</h1>
+        <h2 class="gkg">Sell your home with us</h2>
         <!-- /// FORM /// -->
-        <form
-          action="#"
-          method="post"
-          class="contact--form"
-          id="form--contact--sell"
-        >
+        <form action="#" method="post" class="contact--form" id="form--contact--sell">
           <p class="form--header">
             Fill up this form for a free consultation:
           </p>
@@ -134,39 +121,21 @@
               <!-- ### NAME ### -->
               <label for="name">Name:</label>
               <br />
-              <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="First and last name"
-                required
-              />
+              <input type="text" name="name" id="name" placeholder="First and last name" required />
               <br />
               <br />
 
               <!-- ### PHONE NUMBER ### -->
               <label for="phone">Phone number:</label>
               <br />
-              <input
-                type="tel"
-                name="phone"
-                id="phone"
-                placeholder="(111)-222-3333"
-                required
-              />
+              <input type="tel" name="phone" id="phone" placeholder="(111)-222-3333" required />
               <br />
               <br />
 
               <!-- ### E-MAIL ### -->
               <label for="email">E-mail:</label>
               <br />
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="eamil@example.com"
-                required
-              />
+              <input type="email" name="email" id="email" placeholder="eamil@example.com" required />
               <br />
             </div>
             <!--  FIRST COLUMN END -->
@@ -177,13 +146,7 @@
                 When should we call you:
               </label>
               <br />
-              <input
-                type="date"
-                name="date"
-                id="date"
-                min="2020-08-06"
-                max="2020-12-31"
-              />
+              <input type="date" name="date" id="date" min="2020-08-06" max="2020-12-31" />
               <br />
               <br />
               <!-- ### TIME ### -->
@@ -193,24 +156,13 @@
                 <input type="radio" name="time" id="morning" value="morning" />
                 <label for="time1" class="form--time--option">Morning</label>
                 <br />
-                <input
-                  type="radio"
-                  name="time"
-                  id="afternoon"
-                  value="afternoon"
-                />
+                <input type="radio" name="time" id="afternoon" value="afternoon" />
                 <label for="time2" class="form--time--option">Afternoon</label>
                 <br />
                 <input type="radio" name="time" id="evening" value="evening" />
                 <label for="time3" class="form--time--option">Evening</label>
                 <br />
-                <input
-                  type="radio"
-                  name="time"
-                  id="time4"
-                  value="true"
-                  checked
-                />
+                <input type="radio" name="time" id="time4" value="true" checked />
                 <label for="time4" class="form--time--option">Any time</label>
               </div>
               <br />
@@ -222,15 +174,8 @@
               <label for="message">Include a message (optional): </label>
               <br />
               <br />
-              <textarea
-                name="message"
-                name="message"
-                id="message"
-                form="form--contact--sell"
-                cols="40"
-                rows="12"
-                style="resize: none;"
-              ></textarea>
+              <textarea name="message" name="message" id="message" form="form--contact--sell" cols="40" rows="12"
+                style="resize: none;"></textarea>
               <br />
             </div>
             <!-- THIRD COLUMN END -->
@@ -251,22 +196,89 @@
         <!-- /// FORM END /// -->
       </div>
     </section>
-
-    <!-- SELLER FORM SCREEN END -->
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- BACK TO TOP NAV START -->
-    <nav id="bottom--nav">
-      <a href="#top"><svg class="fas fa-arrow-circle-up"></svg></a>
-    </nav>
-    <!-- BACK TO TOP NAV END -->
-    <!-- ####################################################################### -->
-    <!-- ####################################################################### -->
-    <!-- FOOTER START -->
-    <footer>
+  </main>
+  <!-- 
+    #################################                                            $$$$$$$$$$
+              MAIN END                                                           $$$$$$$$$$
+    #################################                                            $$$$$$$$$$
+    -->
+  <!-- 
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+              FOOTER START          #################################$$$$$$$$$$  $$$$$$$$$$
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+    -->
+  <footer>
+    <h2 class="gkg footer__gkg text__shadow">
+      GOLD
+      <br />
+      KEY
+      <br />
+      GROUP
+    </h2>
+    <img src="../Images/gkg--wordless-300x364.png" alt="Gold Key Group logo" class="footer__img">
+    <div class="footer__grid">
+      <h2>
+        You can always reach us here:
+      </h2>
+      <div id="footer__addresses">
+        <div class="footer__maria">
+          <h3>
+            Maria Zendejas
+          </h3>
+          <address>
+            Cellphone:
+            <br>
+            <a href="tel:407-913-0154" title="Call Maria">
+              (407)-913-0154
+            </a>
+            <br />
+            <br />
+            E-mail:
+            <br />
+            <a href="mailto:mariazendejas@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Maria%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+              target="_blank" title="Send an e-mail to Maria">
+              mariazendejasrealestate@gmail.com
+            </a>
+            <address>
+        </div>
+        <div class="footer__paula">
+          <h3>
+            Paula Correa
+          </h3>
+          <address>
+            Cellphone:
+            <br>
+            <a href="tel:407-668-9070" title="Call Paula">
+              (407)-668-9070
+            </a>
+            <br>
+            <br>
+            E-mail:
+            <br>
+            <a href="mailto:paulacorreare@gmail.com?subject=Inquiry%20from%20your%20website%20&body=Hello%2C%20Paula%2C%0D%0A%0D%0AMy%20name%20is%3A%20%0D%0AMy%20phone%20number%20is%3A%20%0D%0AThe%20best%20time%20to%20call%20me%20is%20at%3A%20%0D%0AI'd%20like%20to%20(%20BUY%20%2F%20SELL%20)%20a%20house%20on%20ZIP%20code%3A%20%0D%0A%0D%0A(For%20buying%20fill%20this%20as%20well%2C%20please)%0D%0A%0D%0AMy%20price%20range%20for%20buying%20is%3A%20%0D%0AMinimum%20sq%20feet%3A%0D%0ABeds%3A%20%0D%0A%0D%0A(Please%20edit%20this%20template%20to%20fit%20your%20inquiry%20or%20delete%20the%20fields%20and%20type%20in%20your%20message)"
+              target="_blank" title="Send an e-mail to Paula">
+              paulacorreare@gmail.com
+            </a>
+          </address>
+        </div>
+      </div>
+      <div class="footer__icons-b">
+        <a href="https://www.facebook.com/goldkeyorlando/">
+          <svg class="fab fa-facebook-square"></svg>
+        </a>
+        <a href="https://www.instagram.com/goldkey_orlando/">
+          <svg class="fab fa-instagram-square"></svg>
+        </a>
+        <a href="#">
+          <svg class="fab fa-twitter-square"></svg>
+        </a>
+      </div>
       <p>
-        &copy; 2020 My Florida Regional MLS DBA Stellar MLS. All rights
-        reserved. The data relating to real estate displayed on this website
+        <b>
+          &copy; 2020 Gold Key Group Orlando. All rights
+          reserved.
+        </b>
+        The data relating to real estate displayed on this website
         comes in part from the Internet Data Exchange (IDX) Program of My
         Florida Regional MLS DBA Stellar MLS. All listing information is deemed
         reliable but not guaranteed and should be independently verified through
@@ -278,22 +290,30 @@
         other use is strictly prohibited and may violate relevant federal and
         state law. Last updated 08/13/2020 XX:XX AM
       </p>
-      <div class="footer--grid">
-        <div class="footer--b--icons">
-          <a href="https://www.facebook.com/goldkeyorlando/">
-            <svg class="fab fa-facebook-f"></svg>
-          </a>
-          <a href="https://www.instagram.com/goldkey_orlando/">
-            <svg class="fab fa-instagram"></svg>
-          </a>
-          <a href="#">
-            <svg class="fab fa-twitter"></svg>
-          </a>
-        </div>
+      <div class="footer__logos-rr-smls">
+        <img src="../Images/rr-logo.png" alt="Revolution Realty logo">
+        <img src="../Images/StellarMLS.png" alt="Stellar MLS logo">
       </div>
-      <div class="copy">&copy; 2020 Gold Key Group Orlando</div>
-    </footer>
-    <!-- FOOTER END -->
-  </body>
-  <!-- BODY END -->
+    </div>
+  </footer>
+  <!-- 
+    #################################                                            $$$$$$$$$$
+              FOOTER END                                                         $$$$$$$$$$
+    #################################                                            $$$$$$$$$$
+    -->
+  <!-- 
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+              BOTOM NAV START       #################################$$$$$$$$$$  $$$$$$$$$$
+    #################################################################$$$$$$$$$$  $$$$$$$$$$
+    -->
+  <nav id="bottom--nav">
+    <a href="#header--title"><svg class="fas fa-arrow-circle-up"></svg></a>
+  </nav>
+  <!-- 
+    #################################                                            $$$$$$$$$$
+              BOTTOM NAV END                                                     $$$$$$$$$$
+    #################################                                            $$$$$$$$$$
+    -->
+</body>
+
 </html>
