--- a/HTML/index.html
+++ b/HTML/index.html
@@ -160,9 +160,17 @@
           </p>
           <div class="welcome--container">
             <p>
+              <!-- We provide the following services: 
+              <br>
+              -Sell your property for a good market price.
+              <br>
+              -Buy the house of your dreams.
+              <br>
+              -Invest in the Real Estate market.
+              <br>+ -->
               We can also assist you if you need counseling on how to invest in real estate located in Orlando,
               Fl,
-              or if you want to sell your house.
+              or if you assistance with relocating to your new home.
               <br>
               <br>
               <a href="#contact">Contact us for a  <em><i>FREE</i></em> consutation!</a>
@@ -350,7 +358,7 @@
           <h2 class="gkg text--shadow section--title" id="contact">
             Contact us
           </h2>
-          <p class="egg--p">
+          <p  >
             Before you 
             <b>buy</b>
             or 
@@ -360,7 +368,8 @@
             !
           </p>
           <!-- /// FORM /// -->
-          <form action="#" method="post" class="contact--form" id="form--contact--us">
+          <form action="#" method="post" class="contact--form" 
+          id="form--contact--us">
             <p class="form--header">
               We are going to call you on the date and time you select bellow.
               <br>
@@ -478,7 +487,7 @@
 
             <input type="submit" id="submit" value="Submit">
             <!-- FORM FOOTER START-->
-            <div class="form--footer">
+            <!-- <div class="form--footer">
               <p>
                 We are never too busy for your referrals! 
                 <br />
@@ -487,9 +496,19 @@
                 Let us provide your friends and family with the finest real estate
                 services.
               </p>
-            </div>
+            </div> -->
             <!-- FORM FOOTER END-->
           </form>
+          <p>
+            We are never too busy for your referrals! 
+            <br />
+            <br>
+            <svg class="far fa-comments"></svg>
+            <br />
+            <br>
+            Let us provide your friends and family with the finest real estate
+            services.
+          </p>
           <!-- /// FORM END /// -->
         </div>
       </section>    
@@ -595,14 +614,14 @@
         <ul class="footer--gkg--sm">
           <li>
             <span>
-              Or contact us on our social media:
+              Contact us on our social media:
             </span>
           </li>
           <li>
             <svg class="fab fa-facebook-square"></svg>
-          </a>
             <a href="https://www.facebook.com/goldkeyorlando/">
             fabook.com/goldkeyorlando
+            </a>
           </li>
           <li>
             <svg class="fab fa-instagram"></svg>
