--- a/HTML/search.html
+++ b/HTML/search.html
@@ -27,7 +27,7 @@
       SELL PROPERTIES
     </h2>
     <br />
-    <p class="egg--p">
+    <p  >
       We speak
       <em>
         <a href="#ENG" title="Click to translate">
@@ -43,7 +43,7 @@
       </em>
     </p>
     </div>
-    <p class="egg--p" id="header--text"></p>
+    <p   id="header--text"></p>
   </header>
   <!-- 
     #################################                                            $$$$$$$$$$
@@ -110,7 +110,7 @@
     <section class="screen">
       <div class="content">
         <h2 class="gkg text--shadow section--title">Search</h2>
-        <p class="egg--p">
+        <p  >
           Please select the specifications for the property you're looking for
         </p>
         <!-- IDX DIV .mls--search -->
