--- a/HTML/sell.html
+++ b/HTML/sell.html
@@ -27,7 +27,7 @@
       SELL PROPERTIES
     </h2>
     <br />
-    <p class="egg--p">
+    <p  >
       We speak
       <em>
         <a href="#ENG" title="Click to translate">
@@ -43,7 +43,7 @@
       </em>
     </p>
     </div>
-    <p class="egg--p" id="header--text"></p>
+    <p   id="header--text"></p>
   </header>
   <!-- 
     #################################                                            $$$$$$$$$$
