--- a/HTML/test.html
+++ b/HTML/test.html
@@ -33,7 +33,7 @@
       SEARCH HOUSES
     </h2>
     <br />
-    <p class="egg--p">
+    <p  >
       We speak
       <em>
         <a href="#ENG" title="Click to translate">
@@ -49,7 +49,7 @@
       </em>
     </p>
     </div>
-    <p class="egg--p" id="header--text"></p>
+    <p   id="header--text"></p>
     <!-- HEADER ICONS START -->
     <div class="header--icons">
       <a href="../HTML/index.html#home">
@@ -148,7 +148,7 @@
     <section class="screen" id="XXXXX--section">
       <div class="content">
         <h2 class="gkg text--shadow section--title">XXXXXXX</h2>
-        <p class="egg--p">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+        <p  >XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
       </div>
     </section>
     <!-- 
