added some media queries

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,8 +24,7 @@
     ></script>
   </head>
 
-  <body>
-    
+  <body class="main--body">
     <div id="upper--nav">
       <span>
           Hablamos
@@ -212,9 +211,7 @@
                 </a>
                 <br />
               </address>
-              <div class="bio">
-              </div>
-              <p class="">
+              <p class="bio">
                 &OpenCurlyDoubleQuote; I was born in Texas and raised in Mexico but I moved to Orlando after college, and I've always
                 felt lucky about moving
                 to this beautiful city.
@@ -247,9 +244,7 @@
                 <a href="https://www.myfloridalicense.com/LicenseDetail.asp?SID=&id=59AD9E8395438A14D2DFCB680BAD1898" target="_blank">SL3418066</a>
                 <br>
               </address>
-              <div class="bio">
-              </div>
-                <p>
+                <p class="bio">
                   &OpenCurlyDoubleQuote; I was born in Texas and raised in Mexico but I moved to Orlando after college, and I've always
                   felt lucky about moving
                   to this beautiful city.
@@ -284,8 +279,8 @@
               </div>
             </div>
             <div class="why--us--box">
-              <div class="why--us--box--h3 gkg">
-                <h3 class="gkg text--shadow ">
+              <div class="why--us--box--h3">
+                <h3 class="gkg text--shadow">
                   Strong negotiation skills
                 </h3>
               </div>
@@ -313,7 +308,7 @@
               </div>
               <div class="why--us--box--p">
                 <p>
-                  Investing in Orlando Real Estate will
+                  If you live outside the US we can help you
                   <em>
                     <b>
                       make your money work for you
@@ -372,6 +367,7 @@
           id="form--contact--us">
             <p class="form--header">
               We are going to call you on the date and time you select bellow.
+              <br>
               <br>
               Please fill the marked(<span style="color: red">*</span>) fields.
             </p>
