modified .why--us--box for mobile

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -306,10 +306,7 @@
                 <h3 class="text--shadow">Extensive market knowledge</h3>
               </div>
               <div class="why--us--box--p">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Aliquam libero suscipit quis tenetur maiores enim?
-                </p>
+                <p>We know the market like the back of our yard!</p>
               </div>
             </div>
             <div class="why--us--box">
@@ -317,10 +314,7 @@
                 <h3 class="gkg text--shadow">Strong negotiation skills</h3>
               </div>
               <div class="why--us--box--p">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nesciunt perspiciatis beatae, amet harum pariatur repellat.
-                </p>
+                <p>We can get you the best prices on the market.</p>
               </div>
             </div>
             <div class="why--us--box">
@@ -329,8 +323,8 @@
               </div>
               <div class="why--us--box--p">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Aliquam libero suscipit quis tenetur maiores enim?
+                  We've been on the business long enough to know the best deal
+                  for you.
                 </p>
               </div>
             </div>
@@ -341,9 +335,10 @@
               <div class="why--us--box--p">
                 <p>
                   If you live outside the US we can help you
-                  <em> <b> make your money work for you </b> </em>.
+                  <em>
+                    <b> make your money work for you.</b>
+                  </em>
                   <br />
-                  Don't lose this great oportunity!
                 </p>
               </div>
             </div>
@@ -353,8 +348,11 @@
               </div>
               <div class="why--us--box--p">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Aliquam libero suscipit quis tenetur maiores enim?
+                  We'll
+                  <em>
+                    <b> take care of the staging </b>
+                  </em>
+                  for you, so you don't have to do a thing.
                 </p>
               </div>
             </div>
@@ -364,8 +362,10 @@
               </div>
               <div class="why--us--box--p">
                 <p>
-                  If you're looking to move into the beautiful Orlando, you can
-                  count with us to help you with anything you need!
+                  We know all you need in order to
+                  <em>
+                    <b> move to Orlando! </b>
+                  </em>
                 </p>
               </div>
             </div>
@@ -577,7 +577,7 @@
       <div class="footer__grid">
         <h2>You can always reach us here:</h2>
         <div id="footer__addresses">
-          <div class="footer__maria">
+          <div class="footer--maria">
             <h3>Maria Zendejas</h3>
             <address>
               <span> Cellphone: </span>
@@ -613,7 +613,7 @@
               </ul>
             </address>
           </div>
-          <div class="footer__paula">
+          <div class="footer--paula">
             <h3>Paula Correa</h3>
             <address>
               <span> Cellphone: </span>
