modified buy and sell pages

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -48,7 +48,7 @@
               HEADER START          #################################$$$$$$$$$$  $$$$$$$$$$
     #################################################################$$$$$$$$$$  $$$$$$$$$$
     -->
-    <header class="header--disp--ptn header--bg">
+    <header class="header--disp--ptn header--bg main--header">
       <h1 class="text--shadow" id="header--title">
         GOLD <br />
         KEY <br />
@@ -87,7 +87,7 @@
       </div>
 
       <div class="header--down--arrow">
-        <a href="#welcome"><svg class="fas fa-chevron-down"></svg> </a>
+        <a href="#welcome--section"><svg class="fas fa-chevron-down"></svg> </a>
       </div>
 
       <img
@@ -128,10 +128,19 @@
             </a>
           </li> -->
           <li>
-            <a href="/HTML/search.html" target="_blank" class="buy"> BUY </a>
+            <a href="/HTML/search.html" target="_blank" class="big--cta">
+              BUY
+            </a>
           </li>
           <li>
-            <a href="/HTML/sell.html" id="sell--home" class="sell"> SELL </a>
+            <a
+              href="/HTML/sell.html"
+              id="sell--home"
+              target="_blank"
+              class="big--cta"
+            >
+              SELL
+            </a>
           </li>
         </ul>
       </nav>
@@ -147,7 +156,7 @@
     #################################################################$$$$$$$$$$  $$$$$$$$$$
     -->
     <main>
-      <section class="screen" id="welcome">
+      <section class="screen" id="welcome--section">
         <div class="content">
           <h2 class="section--title gkg text--shadow">Welcome</h2>
           <p>We are here to help you find the house of your dreams!</p>
@@ -175,9 +184,7 @@
       </section>
       <section class="screen" id="about--section">
         <div class="content">
-          <h2 class="gkg text--shadow section--title" id="about">
-            Meet our agents:
-          </h2>
+          <h2 class="text--shadow section--title" id="about">About us</h2>
           <div class="agents">
             <div class="agent">
               <img src="../Images/mz.png" alt="Maria Zendejas" class="bs" />
@@ -296,9 +303,7 @@
 
       <section class="screen" id="why--us--section">
         <div class="content">
-          <h2 class="gkg text--shadow section--title" id="why--us">
-            Why choose Gold Key Group
-          </h2>
+          <h2 class="text--shadow section--title" id="why--us">Why us</h2>
 
           <div class="why--us">
             <div class="why--us--box">
@@ -694,7 +699,9 @@
         # BOTTOM NAV
      -->
     <nav id="bottom--nav">
-      <a href="#welcome"><svg class="fas fa-arrow-circle-up"></svg> </a>
+      <a href="#welcome--section"
+        ><svg class="fas fa-arrow-circle-up"></svg>
+      </a>
     </nav>
   </body>
 </html>
