--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,6 +18,9 @@
 
     <link rel="stylesheet" href="../CSS/main/main.css" />
     <link rel="shortcut icon" type="image/ico" href="../Images/favicon.ico" />
+    <!-- <link rel="icon" type="image/png" sizes="256x256" href="#" /> -->
+
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <script
       src="https://kit.fontawesome.com/76fa9a81bb.js"
@@ -162,6 +165,10 @@
           <p>We are here to help you find the house of your dreams!</p>
           <div class="welcome--container">
             <p>
+              But if that's not what you're looking for, we can also help you
+              invest in real estate or sell it!
+            </p>
+            <p>
               <!-- We provide the following services: 
               <br>
               -Sell your property for a good market price.
@@ -170,11 +177,10 @@
               <br>
               -Invest in the Real Estate market.
               <br>+ -->
-              We can also provide counseling on how to invest in Orlando real
-              estate located in Orlando, Fl, or if you assistance with
-              relocating to your new home.
-              <br />
-              <br />
+              <!-- We can also provide counseling on how to invest in Orlando real
+              estate, or if you assistance with
+              relocating to your new home. -->
+
               <a href="#contact"> Contact us</a> to find the home of your
               dreams.
             </p>
@@ -531,6 +537,10 @@
               </div>
               <!-- THIRD COLUMN END -->
             </div>
+            <div
+              class="g-recaptcha"
+              data-sitekey="6LfBlcoZAAAAAJ0w9JMD4Tye281QJZyXmn4t55u3"
+            ></div>
 
             <input type="submit" id="submit" value="Submit" />
             <!-- FORM FOOTER START-->
@@ -582,7 +592,7 @@
       <div class="footer__grid">
         <h2>You can always reach us here:</h2>
         <div id="footer__addresses">
-          <div class="footer--maria">
+          <div class="footer--card">
             <h3>Maria Zendejas</h3>
             <address>
               <span> Cellphone: </span>
@@ -618,7 +628,7 @@
               </ul>
             </address>
           </div>
-          <div class="footer--paula">
+          <div class="footer--card">
             <h3>Paula Correa</h3>
             <address>
               <span> Cellphone: </span>
@@ -655,7 +665,7 @@
             </address>
           </div>
         </div>
-        <h3 style="margin: 1em auto">Gold Key Group</h3>
+        <h3 style="margin: 0.5em auto; font-size: 4em">Gold Key Group</h3>
         <ul class="footer--gkg--sm">
           <li>
             <span> Contact us on our social media: </span>
@@ -673,7 +683,6 @@
             </a>
           </li>
         </ul>
-
         <p>
           <b> &copy; 2020 Gold Key Group Orlando. All rights reserved. </b>
           The data relating to real estate displayed on this website comes in
