--- a/HTML/search.html
+++ b/HTML/search.html
@@ -180,7 +180,7 @@
       <div class="footer__grid">
         <h2>You can always reach us here:</h2>
         <div id="footer__addresses">
-          <div class="footer--maria">
+          <div class="footer--card">
             <h3>Maria Zendejas</h3>
             <address>
               <span> Cellphone: </span>
@@ -216,7 +216,7 @@
               </ul>
             </address>
           </div>
-          <div class="footer--paula">
+          <div class="footer--card">
             <h3>Paula Correa</h3>
             <address>
               <span> Cellphone: </span>
@@ -253,7 +253,7 @@
             </address>
           </div>
         </div>
-        <h3 style="margin: 1em auto">Gold Key Group</h3>
+        <h3 style="margin: 0.5em auto; font-size: 4em">Gold Key Group</h3>
         <ul class="footer--gkg--sm">
           <li>
             <span> Contact us on our social media: </span>
@@ -271,7 +271,6 @@
             </a>
           </li>
         </ul>
-
         <p>
           <b> &copy; 2020 Gold Key Group Orlando. All rights reserved. </b>
           The data relating to real estate displayed on this website comes in
